--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Crime:"
+title: "Crime Violentos contra a Vida:"
 output: 
   flexdashboard::flex_dashboard:
  #   logo: figure/reconhecendosalvador.gif
@@ -54,8 +54,8 @@ crimes_variaveis <-  nomes_variaveis[3:11]
 
 ```
 
-Os dados de segurança pública podem ser divididos em dois grupos.
-Crimes contra a Vida (CV) e Crimes contra o Patrimônio (CP).  
+Os dados apresentados na forma gráfica a seguir foram obtidos do sítio
+da Secretaria de Segurança Pública do Estado da Bahia SSP-BA.
 
 Homicídio Doloso 
 ================================
@@ -88,7 +88,7 @@ Homicídio Doloso
         panel.grid.major = element_line(color = "gray70", size = .95),
         panel.grid.minor = element_line(color = "gray70", size = .25))+
   #scale_x_continuous(breaks = seq(2009, 2018, by = 1))+
-  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %y"))
+  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %Y"))
 
 ggplotly(objeto)
 
@@ -125,7 +125,7 @@ Lesão Corporal Seguida de Morte
         panel.grid.major = element_line(color = "gray70", size = .95),
         panel.grid.minor = element_line(color = "gray70", size = .25))+
   #scale_x_continuous(breaks = seq(2009, 2018, by = 1))+
-  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %y"))
+  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %Y"))
 
 ggplotly(objeto)
 
@@ -162,7 +162,7 @@ Tentativa de Homicídio
         panel.grid.major = element_line(color = "gray70", size = .95),
         panel.grid.minor = element_line(color = "gray70", size = .25))+
   #scale_x_continuous(breaks = seq(2009, 2018, by = 1))+
-  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %y"))
+  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %Y"))
 
 ggplotly(objeto)
 
@@ -178,7 +178,9 @@ Estupro
 	objeto <- seguranca_v02 %>% 
   group_by(MES) %>%
   summarise(Ocorrencias = sum(Estupro)) %>%
-  ggplot(aes(x=MES,y=Ocorrencias)) +
+  ggplot(aes(x=MES,y=Ocorrencias,text = paste(
+                 'MES', as.Date(MES),
+                 'Obs', Ocorrencias))) +
   geom_line(color="#fac113",size=2) +
   labs(
     title = "",
@@ -199,7 +201,7 @@ Estupro
         panel.grid.major = element_line(color = "gray70", size = .95),
         panel.grid.minor = element_line(color = "gray70", size = .25))+
   #scale_x_continuous(breaks = seq(2009, 2018, by = 1))+
-  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %y"))
+  theme(axis.text.x = element_text(angle = 25, vjust = 1.0, hjust = 1.0))+scale_x_date(breaks = "6 month", minor_breaks = "1 month",labels=date_format("%b %Y"))
 
 ggplotly(objeto)
 
